--- a/WC3OmniTool/MainWindow.xaml
+++ b/WC3OmniTool/MainWindow.xaml
@@ -37,10 +37,16 @@
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Text="WC3 Omni Tool" Padding="5" FontSize="9" VerticalAlignment="Center" MouseDown="OnCaptionMouseDown"/>
             <Button HorizontalAlignment="Right" Width="20" Background="Transparent" BorderThickness="0" FocusVisualStyle="{x:Null}" Click="HideButton_Click">
+                <Button.ToolTip>
+                    <TextBlock Text="현재 창을 숨깁니다"/>
+                </Button.ToolTip>
                 <TextBlock Text="❌" Foreground="#F3F3F3" FontSize="7"/>
             </Button>
             <Grid Grid.Row="0" VerticalAlignment="Top" Height="2" Background="#FF80FF" />
             <Button Grid.Row="1" Background="#4080FF" BorderThickness="0" FocusVisualStyle="{x:Null}" Click="RefreshButton_Click">
+                <Button.ToolTip>
+                    <TextBlock Text="도구 목록을 다시 스캔합니다"/>
+                </Button.ToolTip>
                 <TextBlock Text="🔄 새로고침" Foreground="#F3F3F3" FontSize="10"/>
             </Button>
             <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Hidden">
