✨ WC3OmniTool > Hide/Show tool
- New feature : Hide tool
- New feature : Show hidden tool

--- a/WC3OmniTool/Elements/ToolButton.xaml
+++ b/WC3OmniTool/Elements/ToolButton.xaml
@@ -18,6 +18,8 @@
              MouseUp="UserControl_MouseUp">
     <UserControl.ContextMenu>
         <ContextMenu>
+            <MenuItem x:Name="MenuHideTool" Click="ToolHide_Click"/>
+            <Separator/>
             <MenuItem Header="파일 탐색기에서 도구 폴더 열기(_X)" Click="ToolBrowse_Click"/>
         </ContextMenu>
     </UserControl.ContextMenu>
