--- a/WC3OmniTool/MainWindow.xaml
+++ b/WC3OmniTool/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WC3OmniTool.MainWindow"
+<Window x:Class="WC3OmniTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -65,17 +65,25 @@
 
             <Grid Grid.Row="0" VerticalAlignment="Top" Height="2" Background="#FF80FF" />
 
-            <ms:ModernSimpleButton Style="{StaticResource ModernSimpleButtonStyle}"
+            <StackPanel Orientation="Horizontal" Grid.Row="1">
+                <ms:ModernSimpleButton Style="{StaticResource ModernSimpleButtonStyle}"
+                                   HotBackground="#D3D3D3"
+                                   HotForeground="#404040"
+                                   Width="20"
+                                   ToolTip="도구 보이기&#x0a;숨긴 도구 목록을 표시합니다"
+                                   Click="HiddenToolButton_Click">
+                    <TextBlock Text="👁️"/>
+                </ms:ModernSimpleButton>
+                <ms:ModernSimpleButton Style="{StaticResource ModernSimpleButtonStyle}"
                                    Background="#4080FF" 
                                    HotBackground="#D3D3D3"
                                    HotForeground="#404040"
-                                   Grid.Row="1" 
+                                   Width="40"
+                                   ToolTip="새로고침 (F5)&#x0a;도구 목록을 다시 스캔합니다"
                                    Click="RefreshButton_Click">
-                <Button.ToolTip>
-                    <TextBlock Text="새로고침 (F5)&#x0a;도구 목록을 다시 스캔합니다"/>
-                </Button.ToolTip>
-                <TextBlock Text="🔄 새로고침"/>
-            </ms:ModernSimpleButton>
+                    <TextBlock Text="🔄갱신"/>
+                </ms:ModernSimpleButton>
+            </StackPanel>
             
             <ScrollViewer x:Name="ToolButtonScrollViewer"
                           Grid.Row="2" 
