--- a/WC3OmniTool/MainWindow.xaml
+++ b/WC3OmniTool/MainWindow.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="WC3OmniTool.MainWindow"
+﻿<Window x:Class="WC3OmniTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -66,6 +66,14 @@
             <Grid Grid.Row="0" VerticalAlignment="Top" Height="2" Background="#FF80FF" />
 
             <StackPanel Orientation="Horizontal" Grid.Row="1">
+                <ms:ModernSimpleButton Style="{StaticResource ModernSimpleButtonStyle}"
+                                   HotBackground="#D3D3D3"
+                                   HotForeground="#404040"
+                                   Width="40"
+                                   ToolTip="도구 추가&#x0a;옴니툴에 도구를 등록합니다"
+                                   Click="AddToolButton_Click">
+                    <TextBlock Text="➕추가"/>
+                </ms:ModernSimpleButton>
                 <ms:ModernSimpleButton Style="{StaticResource ModernSimpleButtonStyle}"
                                    HotBackground="#D3D3D3"
                                    HotForeground="#404040"
