--- a/WC3OmniTool/Modals/HiddenToolWindow.xaml
+++ b/WC3OmniTool/Modals/HiddenToolWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WC3OmniTool.HiddenToolWindow"
+﻿<Window x:Class="WC3OmniTool.Modals.HiddenToolWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -23,7 +23,7 @@
 
             <!-- 외부 리소스 딕셔너리 병합 -->
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ModernStyles/ModernSimpleButtonStyle.xaml"/>
+                <ResourceDictionary Source="../ModernStyles/ModernSimpleButtonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <SolidColorBrush x:Key="ApplicationBackground" Color="#212121"/>
